almost done with farm fields
